--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,22 +1,23 @@
 .container {
   background-color: #0f0f0f;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 76px);
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .logoContent {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .spyke {
   max-width: 480px;
+  max-height: 250px;
   object-fit: contain;
   width: auto;
   height: auto;
@@ -25,6 +26,43 @@
 .title {
   color: #fff;
   text-align: center;
-  margin-top: 28px;
+  margin: 28px;
   line-height: 150%;
+}
+
+.infoContent {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.box {
+  background-color: #fafafa;
+  padding: 14px 44px;
+  border-radius: 4px;
+  transition: transform 0.4s;
+}
+
+.box:hover {
+  transform: scale(1.08);
+}
+
+@media screen and (max-width: 580px) {
+  .spyke {
+    max-width: 80%;
+  }
+
+  .title {
+    font-size: 24px;
+  }
+
+  .infoContent {
+    flex-direction: column;
+  }
+
+  .box {
+    width: 80%;
+    margin-bottom: 14px;
+    text-align: center;
+  }
 }
