--- a/src/components/textArea/styles.module.css
+++ b/src/components/textArea/styles.module.css
@@ -5,4 +5,9 @@
   border-radius: 8px;
   outline: none;
   padding: 8px;
+  transition: all 0.5s;
+}
+
+.textarea:focus {
+  border: 1px solid #0053ff;
 }
