--- a/src/pages/task/styles.module.css
+++ b/src/pages/task/styles.module.css
@@ -62,6 +62,12 @@
   padding: 14px;
   border-radius: 4px;
   margin-bottom: 14px;
+  transition: all 0.2s ease-in-out;
+}
+
+.comment:hover {
+  border: 1px solid #0053ff;
+  background-color: #dddddd4d;
 }
 
 .headCommnet {
